# web-analyzer

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  taplo.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: README.md  advanced_content_scanner.md  api_security_scanner.md  cloudflare_bypass.md  contact_spy.md  domain_dns.md  domain_info.md  domain_validator.md  geo_analysis.md  nmap_zero_day.md  readme.md  security_analysis.md  seo_analysis.md  subdomain_discovery.md  subdomain_takeover.md  web_technologies.md
examples/: domain_info.rs  full_audit.rs  security_scan.rs
payloads/: api_endpoints.txt  auth_bypass_headers.txt  command_injection.txt  lfi.txt  nosql_injection.txt  sql_injection.txt  ssrf.txt  ssti.txt  xss.txt  xxe.txt
src/: advanced_content_scanner.rs  api_security_scanner.rs  cloudflare_bypass.rs  contact_spy.rs  domain_dns.rs  domain_dns_mobile.rs  domain_info.rs  domain_info_mobile.rs  domain_validator.rs  domain_validator_mobile.rs  error.rs  geo_analysis.rs  lib.rs  nmap_zero_day.rs  nmap_zero_day_mobile.rs  payloads.rs  rest_handlers.rs  security_analysis.rs  security_analysis_mobile.rs  seo_analysis.rs  subdomain_discovery.rs  subdomain_discovery_mobile.rs  subdomain_takeover.rs  subdomain_takeover_mobile.rs  web_technologies.rs  ws_handler.rs
tests/: advanced_content_scanner_tests.rs  api_security_scanner_tests.rs  cloudflare_bypass_tests.rs  contact_spy_tests.rs  domain_dns_tests.rs  domain_info_tests.rs  geo_analysis_tests.rs  nmap_zero_day_tests.rs  payloads_tests.rs  security_analysis_tests.rs  seo_analysis_tests.rs  subdomain_discovery_tests.rs  subdomain_takeover_tests.rs  web_technologies_tests.rs
