[package]
name = "web-analyzer"
version = "0.1.0"
edition = "2021"
description = "WebAnalyzer Rust Port - Domain Security & Intelligence Platform"

[dependencies]
chrono = "0.4.44"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["json", "blocking", "rustls"] }
scraper = "0.26.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }

[features]
default = []

# Intelligence Gathering
domain-info = []
domain-dns = []
seo-analysis = []
web-technologies = []

# Reconnaissance
subdomain-discovery = []
contact-spy = []
advanced-content-scanner = []

# Security Assessment
security-analysis = []
subdomain-takeover = []
cloudflare-bypass = []
nmap-zero-day = []
api-security-scanner = []
geo-analysis = []
